[tool.poetry]
name = "test-action-repo"
version = "0.1.0"
description = ""
authors = ["anders0204 <anders0204@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.4"
pytest-cov = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
